# actual-budget-categorizer

./: .gitignore  Dockerfile  README.md  config.example.json  docker-compose.yml  package.json
src/: actual-client.js  categorizer.js  export-training-data.js  index.js  local-categorizer.js  utils.js
trainer/: pyproject.toml
trainer/trainer/: __init__.py  evaluate.py  export.py  predict.py  train.py
