[project]
name = "actual-budget-trainer"
version = "1.0.0"
description = "Train a local ML classifier for Actual Budget transaction categorization"
requires-python = ">=3.10"
dependencies = [
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
]

[project.scripts]
train = "trainer.train:main"
export = "trainer.export:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["trainer"]

[dependency-groups]
dev = []